# UnboxingEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GLAux.h  MyList.h  SceneElement.cpp  SceneElement.h  boundingbox.cpp  collisionutil.cpp  collisionutil.h  draw.cpp  draw.h  grafo.cpp  grafo.h  interface.h  lightsource.h  lista.h  main.cpp  material.cpp  material.h  mathUtil.h  matrix.cpp  mazeGenerator.cpp  mazeGenerator.h  mazeUtil.cpp  meshbuffer.h  rect.cpp  rect.h  region.cpp  region.h  texture.h
Examples/: 2DCollisionVectors.cpp  CMakeLists.txt  README
Legacy/: boundingbox.cpp  boundingbox.h  glm.cpp  glm.h  lightsource.cpp  lightsource.h  mazeGenerator.cpp  mazeUtil.h  physicsutil.h  rect.h  resources.cpp  resources.h  sphere.cpp
include/: BoundingBox.h  BoundingBox2D.h  CMakeLists.txt  Camera.h  CatUnboxerEngine.h  Composite.h  CoreEvents.h  CustomTypes.h  EventDispatcher.h  GLAux.h  IComponent.h  IComposite.h  IEngine.h  MathUtils.h  Matrix.h  MeshBuffer.h  MeshPrimitivesUtils.h  Quaternion.h  SceneComposite.h  SceneElement.h  SceneElements.h  SceneNode.h  TransformComponent.h  UVector.h  UnboxingEngine.h  Vector3Df.h  Vector3d.h  boundingbox.h  collisionutil.h  draw.h  glm.h  grafo.h  lightsource.h  lista.h  mapa.h  material.h  mathUtil.h  matrix.h  meshbuffer.h  octree.h  (+8 more)
include/algorithms/: CollisionAlgorithms.h
include/internal_components/: BoundingBox2DColliderComponent.h  BoundingBoxColliderComponent.h  IColliderComponent.h  IComponent.h  IRenderComponent.h  RayColliderComponent.h  RenderComponent.h  SegmentColliderComponent.h  TransformComponent.h
include/systems/: CollisionSystem.h  IInputSystem.h  IRenderSystem.h  OpenGLRenderSystem.h
sdl_gl_render_system/: CMakeLists.txt  sdl_gl_render_system_lib.cpp  sdl_gl_render_system_lib.h  sdl_input_system_lib.cpp  sdl_input_system_lib.h
sdl_gl_render_system/dummie_libs/: sdl_gl_render_system_lib.cpp  sdl_gl_render_system_lib.h  sdl_input_system_lib.cpp  sdl_input_system_lib.h
sdl_gl_render_system_lib/: CMakeLists.txt  sdl_gl_render_system_lib.cpp  sdl_gl_render_system_lib.h
source/: BoundingBox.cpp  BoundingBox2D.cpp  CMakeLists.txt  Camera.cpp  CatUnboxerEngine.cpp  Composite.cpp  GLAux.cpp  MathUtils.cpp  Matrix.cpp  MeshBuffer.cpp  Quaternion.cpp  SceneComposite.cpp  SceneElement.cpp  SceneNode.cpp  TransformComponent.cpp  UVector.cpp  UnboxingEngine.cpp  Vector3Df.cpp  Vector3d.cpp  collisionutil.cpp  draw.cpp  glm.cpp  interface.cpp  mapa.cpp  material.cpp  mathUtil.cpp  matrix.cpp  meshbuffer.cpp  octree.cpp  physicsutil.cpp  quaternion.cpp  resources.cpp  vector3D.cpp
source/algorithms/: CollisionAlgorithms.cpp
source/internal_components/: BoundingBox2DColliderComponent.cpp  BoundingBoxColliderComponent.cpp  IBoundingBoxColliderComponent.cpp  RayColliderComponent.cpp  RenderComponent.cpp  SegmentColliderComponent.cpp  TransformComponent.cpp
source/systems/: CMakeLists.txt  CollisionSystem.cpp  OpenGLRenderSystem.cpp
tests/: AlgorithmsTests.cpp  BoundingBoxTest.cpp  CMakeLists.txt  CollisionWorld.cpp  ComponentSystemTests.cpp  EventSystemTests.cpp  MatrixTests.cpp  main.cpp
